--- a/test_plone60.cfg
+++ b/test_plone60.cfg
@@ -10,3 +10,38 @@ update-versions-file = test_plone60.cfg
 [versions]
 createcoverage = 1.5
 watchdog = 2.1.6
+
+# Added by buildout at 2023-06-22 13:56:54.671399
+bleach = 6.0.0
+coverage = 7.2.3
+i18ndude = 5.5.0
+keyring = 23.13.1
+markdown-it-py = 2.2.0
+mdurl = 0.1.2
+pkginfo = 1.9.6
+readme-renderer = 37.3
+requests-toolbelt = 0.10.1
+rfc3986 = 2.0.0
+rich = 13.3.4
+twine = 4.0.2
+zest.releaser = 7.3.0
+
+# Required by:
+# zest.releaser==7.3.0
+colorama = 0.4.6
+
+# Required by:
+# keyring==23.13.1
+jaraco.classes = 3.2.3
+
+# Required by:
+# jaraco.classes==3.2.3
+more-itertools = 9.1.0
+
+# Required by:
+# bleach==6.0.0
+webencodings = 0.5.1
+
+# Required by:
+# derico.article==1.0a1
+z3c.jbot = 1.1.1
